# fersk

./: Cargo.toml  LICENSE-MIT  README.md  build.ps1  version.json
chocolatey/: package.nuspec
chocolatey/tools/: ChocolateyInstall.ps1
src/: command.rs  git.rs  main.rs
src/config/: default.toml  mod.rs
src/util/: fs.rs  hash.rs  mod.rs  pid.rs
