[package]
name = "fersk"
version = "0.3.0"
edition = "2021"
authors = ["Kjartan F. Kvamme <forbjok@gmail.com>"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[dependencies]
anyhow = "1.0.53"
clap = { version = "3.0.13", features = ["derive"] }
dirs = "4.0.0"
hex = "0.4.3"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
sha2 = "0.10.1"
sysinfo = "0.27.7"
thiserror = "1.0.30"
toml = "0.5.8"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
